--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9.36.0",
+    "lightningcss-linux-x64-gnu": "^1.30.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5"
